--- a/index.html
+++ b/index.html
@@ -63,14 +63,46 @@
                     <h1>MARVEL</h1>
                 </section>
 
-                <section data-background-image="img/masking_server_run_time.png"
-                         data-background-position="fill"
-                         data-background-size="80%">
+                <section>
+                    <section data-background-image="img/n50_1.png"
+                             data-background-position="fill"
+                             data-background-size="80%">
+                    </section>
+                    <section data-background-image="img/n50_2.png"
+                             data-background-position="fill"
+                             data-background-size="80%">
+                    </section>
+                    <section data-background-image="img/n50_3.png"
+                             data-background-position="fill"
+                             data-background-size="80%">
+                    </section>
+                    <section data-background-image="img/n50_4.png"
+                             data-background-position="fill"
+                             data-background-size="80%">
+                    </section>
+                    <section data-background-image="img/n50_5.png"
+                             data-background-position="fill"
+                             data-background-size="80%">
+                    </section>
+                    <section data-background-image="img/n50_6.png"
+                             data-background-position="fill"
+                             data-background-size="80%">
+                    </section>
+                    <section data-background-image="img/n50_7.png"
+                             data-background-position="fill"
+                             data-background-size="80%">
+                    </section>
                 </section>
 
-                <section data-background-image="img/repeat_annotation_run_time.png"
-                         data-background-position="fill"
-                         data-background-size="80%">
+                <section>
+                    <section data-background-image="img/masking_server_run_time.png"
+                             data-background-position="fill"
+                             data-background-size="80%">
+                    </section>
+                    <section data-background-image="img/repeat_annotation_run_time.png"
+                             data-background-position="fill"
+                             data-background-size="80%">
+                    </section>
                 </section>
             </div>
         </div>
