--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
                              data-background-size="80%">
                     </section>
                 </section>
+
+                <section>
+                    <h2>Open questions</h2>
+                    <ul>
+                        <li>Why is the repeat masking different between the masking server and the repeat annotation?</li>
+                    </ul>
+                </section>
             </div>
         </div>
 
